# AI-Graph-using-Rust

./: README.md
docs/: help.html  index.html  search-index.js  settings.html  src-files.js
docs/main/: all.html  fn.main.html  fn.read_input.html  fn.run_algorithm.html  fn.start_execution.html  index.html  sidebar-items.js
docs/main/data_structure/: index.html  sidebar-items.js
docs/main/data_structure/bounding_box/: index.html  struct.BoundingBox.html
docs/main/data_structure/city/: index.html  sidebar-items.js  struct.City.html
docs/main/data_structure/graph/: index.html  sidebar-items.js  struct.GraphStructure.html
docs/main/data_structure/map/: constant.MARGIN_DEGREES.html  constant.MARGIN_KM.html  constant.MIN_BANDS.html  index.html  sidebar-items.js  struct.Map.html
docs/main/functions/: index.html  sidebar-items.js
docs/main/functions/between_cities/: index.html  (+2 more)
docs/main/informed_algorithms/: index.html  sidebar-items.js
docs/main/uninformed_algorithms/: index.html  sidebar-items.js
docs/search.desc/main/: main-desc-0-.js
docs/src/main/: main.rs.html
main/: Cargo.toml
main/src/: main  main.rs
main/src/data_structure/: bounding_box.rs  city.rs  graph.rs  map.rs  mod.rs  search_results.rs
main/src/functions/: between_cities.rs  calculate.rs  get_from_api.rs  mod.rs  path_distance.rs  results.rs
main/src/informed_algorithms/: a_star.rs  backtracking.rs  breadth_first_search.rs  greedy_search.rs  ida_star.rs  mod.rs
main/src/uninformed_algorithms/: backtracking.rs  breadth_first_search.rs  deep_search.rs  mod.rs  ordered_search.rs
(+78 files in other folders)
