[package]
name = "main"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
diesel = { version = "2.2.0", features = ["postgres", "numeric", "uuid", "chrono"]}
dotenvy = "0.15"
diesel-async = {version = "0.5", features = ["postgres", "deadpool"]}
petgraph = "0.8.2"
osmpbfreader = "0.19.1"
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"] }
serde_json = "1.0.140"


