[package]
name = "main"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["blocking","json", "rustls-tls"] }
petgraph = {version = "0.8.2", features = ["serde-1"]}
osmpbfreader = "0.19.1"
rand = "0.8"
dotenvy = "0.15"
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
rayon = "1.8"
rusqlite = "0.37"
